<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="end"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="none"
                android:text="@string/_0"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/primary_text_light_nodisable"
                android:textColorHint="#78909C"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@id/multiplyButton"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@color/design_default_color_secondary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ac"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="#ED9EC0"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

    <Button
        android:id="@+id/backspaceButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/backspace"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="#ED9EC0"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/multiplyButton"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/equals"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/multiplyButton"
        app:layout_constraintTop_toTopOf="@+id/button0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/multiplyButton"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/times"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:backgroundTint="@android:color/holo_blue_bright"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/multiplyButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

</androidx.constraintlayout.widget.ConstraintLayout>